# millipds

./: .gitignore  README.md  millipds_dev.dockerfile  pyproject.toml  pyrightconfig.json
.github/workflows/: test.yml
docs/: ACCOUNTS.md  ARCHITECTURE.md  DEPLOY.md  SYSADMIN.md
migration_scripts/: v2.py  v3.py  v4.py
src/millipds/: __main__.py  app_util.py  appview_proxy.py  atproto_repo.py  atproto_sync.py  auth_bearer.py  auth_oauth.py  config.py  crypto.py  database.py  did.py  html_templates.py  jwt_monkeypatch.py  oauth.py  repo_ops.py  service.py  ssrf.py  static_config.py  util.py
src/millipds/templates/: authn.html  authz.html  base.html  error.html
test_data/: create_identity.sh  devenv_test_setup.sh
tests/: __init__.py  conftest.py  integration_test.py  run_integration_test.sh  test_auth.py  test_blob_management.py  test_database.py  test_error_handling.py  test_jwt_monkeypatch.py  test_repo_operations.py  test_split_as_rs.py  test_sync_protocol.py
