[build-system]
requires = [
	"setuptools>=61.0", "setuptools_scm>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "millipds"
#version = "0.0.1"
dynamic = ["version"]
authors = [
 	{ name="David Buchanan", email="d@vidbuchanan.co.uk" },
]
description = "A lightweight atproto PDS"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = [
	"cbrrr >= 1.0.0, < 2",
	"atmst@git+https://github.com/DavidBuchanan314/atmst",
	"aiohttp",
	"aiohttp_cors",
	"pyjwt[crypto]",
	"docopt",
	"apsw",
	"argon2-cffi",
]

[project.optional-dependencies]
docs = [
	"sphinx",
	"sphinx-rtd-theme",
	"sphinxcontrib-jquery",
]

[project.urls]
Homepage = "https://github.com/DavidBuchanan314/millipds"
Issues = "https://github.com/DavidBuchanan314/millipds/issues"

[project.scripts]
millipds = "millipds.__main__:main"

[tool.ruff.format]
indent-style = "tab"

[tool.setuptools_scm]
